# pyscf-boost

pyscf/lib/: CMakeLists.txt
pyscf/lib/vhf/: CMakeLists.txt  fmt.c  jk_driver.c  md_contract_jk.c  md_contract_jk_simd.c  md_tensors.c  nr_contract_jk.c  pair_data.c  simd.h  vhf.h
pyscf/lib/vhf/tests/: MD_generator.py  eri_MD.py  tabulate_boys.py
pyscf_boost/: vhf.py
pyscf_boost/tests/: test_vhf.py
